[package]
name = "game-client"
version = "0.1.0"
authors = ["Luke Miles <luke.49@live.co.uk>"]
edition = "2018"

[dependencies]
game-state = { path = "../game-state" }
game-interface = { path = "../game-interface" }
lib = { path = "../lib" }
peer-client = { path = "../peer-client" }
num-traits = "0.2"
sized_matrix = "0.2"
higher_order_functions = "0.1"
