[package]
name = "web-interface"
version = "0.1.0"
authors = ["Luke Miles <luke.49@live.co.uk>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = { version = "0.2", features = ["nightly"] }
js-sys = "0.3"
game-interface = { path = "../game-interface" }
lib = { path = "../lib" }

[dependencies.web-sys]
version = "0.3"
features = [
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"HtmlImageElement",
	"KeyboardEvent",
]

[features]
debug = []

[dev-dependencies]
wasm-bindgen-test = "0.3"
