[package]
name = "web-wrapper"
version = "0.1.0"
authors = ["Luke Miles <luke.49@live.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
wee_alloc = { version = "0.4", optional = true }
game-client = { path = "../game-client" }
lib = { path = "../lib" }
web-interface = { path = "../web-interface" }

[dependencies.web-sys]
version = "0.3"
features = [
	"Document",
	"Element",
	"HtmlCanvasElement",
	"Window",
]

[features]
debug = []

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
